# gwh

./: .gitignore  desc.md  index.html  package-lock.json  package.json  tsconfig.json  产品说明文档.md  技术文档.md
.github/workflows/: build-macos.yml  build-windows.yml
src/: App.vue  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: TaskForm.vue
src/router/: index.ts
src/stores/: task.ts
src/types/: index.ts
src/views/: ContactView.vue  StatsView.vue  TaskView.vue
