[package]
name = "gaochou-bu"
version = "0.1.0"
edition = "2021"

[lib]
name = "gaochou_bu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.4.2"
